--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="jquery.console.js"></script>
     <script type="text/javascript">
       $(document).ready(function(){
+         const MAX_FILESIZE_LENGTH = 6;
+
          // Get current timestamp in correct format
          function timestamp() {
              var c_ts = (new Date(Date.now())).toString();
@@ -15,11 +17,20 @@
              return c_ts_split[1] + " " + c_ts_split[2] + " " + c_ts_split[4];    
          }
 
+         function sizepad(s) {
+             var pad_n = MAX_FILESIZE_LENGTH - s.length;
+             var padding = "";
+             if(pad_n == 0) return s;
+             for(var i = 0; i < pad_n; i++) {
+                 padding += " ";
+             }
+             return padding + s;
+         }
          
          // Prototype to handle items in the 'filesystem'
-         function Item(name, size, dir_b = false, owner = "tomg.io", group = "user", owner_a = "7", group_a = "4", other_a = "4", items = [],  ts=timestamp()) {
+         function Item(name, size=0, dir_b = false, owner = "tomg.io", group = "user", owner_a = "7", group_a = "4", other_a = "4", items = [],  ts=timestamp()) {
              this.name = name; // The identifier of the item
-             this.size = size; // The size, in bytes, of the item
+             this.size = sizepad(size); // The size, in bytes, of the item
              this.dir_b = dir_b; // Is this item a directory? (Defaults to false)
              this.owner = owner; // Who owns this item? (Defaults to tomg.io)
              this.group = group; // What group does this item belong to? (Defaults to user) 
@@ -58,7 +69,7 @@
  
          var CV = new Item("CV.pdf", "149051");
          var Contact = new Item("contact.txt", "370");
- 
+
          // CONSTRUCT THE FILESYSTEM
          var home = new Item("~", true);
 
@@ -313,6 +324,7 @@
           overflow-x: hidden;
           overflow-y: hidden;
       }
+      div.console1 { white-space: pre;}
       div.console1 { word-wrap: break-word; }
       div.console1 { font-size: 14px }
       div.console1 div.jquery-console-inner
