removed development notice from 'cat'

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
          // DEFINE ALL OF THE AVAILABLE COMMANDS
          const CMDS  = []     
 
-         const cat = new Cmd("cat", "concatenate files and print them to standard output\nusage: cat <file 1> <file 2>...\nCURRENTLY IN DEVELOPMENT - NOT READY YET!");
+         const cat = new Cmd("cat", "concatenate files and print them to standard output\nusage: cat <file 1> <file 2>...");
          const evince = new Cmd("evince", "open a pdf file in a new tab\n usage: evince <filepath>");
          const exit   = new Cmd("exit", "close the tab\n usage: exit");
          const groups = new Cmd("groups", "list the groups that you belong to\nusage: groups");
