strip "s from arg names - Happy? @gebn ;)

--- a/index.html
+++ b/index.html
@@ -195,6 +195,14 @@
                }
                args_b = true;
            }
+ 
+           if(args) {
+               // remove surrounding quotes
+               for(var i = 0; i < args.length; i++) {
+                   var arg = args[i];
+                   if(arg.slice(0,1) == '"' && arg.slice(args.length-1,args.length) == '"') args[i] = arg.slice(1,arg.length -1);
+               }
+           }
 
            // Common error messages 
            var invalid_flags = function(command, flags) {
@@ -383,6 +391,7 @@
                    }
                }
                // Create a blank file with the given name
+               var name = args[0]; 
                currentdir.items.push(new Item(args[0], sizepad(0), true));
                return return_message("");
            }
