--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       $(document).ready(function(){
          const MAX_FILESIZE_LENGTH = 6;
 
+         // Return the current user
+         function curuser() { return currentuser; }
+
          // Return whether or not a file is empty
          function isEmpty(filename) {
              for(var i = 0; i < currentdir.items.length; i++) {
@@ -58,7 +61,7 @@
 
  
          // Prototype to handle items in the 'filesystem'
-         function Item(name, size=sizepad(0), empty=false, data="", dir_b = false, owner = "tomg.io", group = "user", owner_a = "6", group_a = "4", other_a = "4", items = [],  ts=timestamp()) {
+         function Item(name, size=sizepad(0), empty=false, data="", dir_b = false, owner = curuser(), group = "user", owner_a = "6", group_a = "4", other_a = "4", items = [],  ts=timestamp()) {
              this.name = name; // The identifier of the item
              this.empty = empty; 
              this.size = sizepad(size); // The size, in bytes, of the item
@@ -100,6 +103,9 @@
              "7" : "rwx"
          }
  
+         // Set these perms for original filesystem
+         var currentuser = "tomg.io";
+
          var CV = new Item("CV.pdf", "149051");
          var Contact = new Item("contact.txt", "370");
          var Edu = new Item("education.txt", "1337");
@@ -117,7 +123,7 @@
          // Keep track of the filepath too
          var filepath = ["~"];
          // Keep track of the current user.   
-         var currentuser = "visitor";
+         currentuser = "visitor";
 
     
          // DEFINE ALL OF THE AVAILABLE COMMANDS
