--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Tom Goodman</title>
+    <title>$ tomsh</title>
     <meta name="Content-Type" content="text/html; charset=UTF-8">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="jquery.console.js"></script>
